--- a/templates/about.html
+++ b/templates/about.html
@@ -1,24 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Hello Flask</title>
-
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </nav>
-
-        <h1>About Page</h1>
-        
-        <script src="" async defer></script>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <h1>About Page</h1>
+{% endblock %}
